Cleaned up expanders on shop

--- a/_layouts/shop.html
+++ b/_layouts/shop.html
@@ -26,45 +26,100 @@ layout: default
               <li>
                 <a aria-label="Hotspot & Internet of Things" href="#">Hotspot &amp; IoT</a>
               </li>
+              <li>
+                <details class="compact indicator-right">
+                  <summary>
+                    Accessories
+                  </summary>
+                  <ul class="nav-list">
+                    <li>
+                      <a href="#">All accessories</a>
+                    </li>
+                    <li>
+                      <a href="#">Cases &amp; covers</a>
+                    </li>
+                    <li>
+                      <a href="#">Chargers &amp; adapters</a>
+                    </li>
+                    <li>
+                      <a href="#">And so on</a>
+                    </li>
+                  </ul>
+                </details>
+              </li>
             </ul>
-            <details>
-              <summary>
-                Accessories
-              </summary>
-              <ul>
-                <li>
-                  <a href="#">All accessories</a>
-                </li>
-                <li>
-                  <a href="#">Cases &amp; covers</a>
-                </li>
-                <li>
-                  <a href="#">Chargers &amp; adapters</a>
-                </li>
-                <li>
-                  <a href="#">And so on</a>
-                </li>
-              </ul>
-            </details>
+            
           </nav>
 
           <nav aria-label="Filter devices">
             <h2 class="h-bravo">
               Filter
-            </h2>           
-            <details>
-              <summary>
-                Deals
-              </summary>
-                <input type="checkbox" id="alphaCheckbox">
-                <label for="alphaCheckbox">Alpha</label>
+            </h2> 
+            <ul class="nav-list">
+              <li>
+                <details class="compact indicator-right">
+                  <summary>
+                    Deals
+                  </summary>
+                    <input type="checkbox" id="alphaCheckbox">
+                    <label for="alphaCheckbox">Alpha</label>
 
-                <input type="checkbox" id="bravoCheckbox">
-                <label for="bravoCheckbox">Bravo</label>
+                    <input type="checkbox" id="bravoCheckbox">
+                    <label for="bravoCheckbox">Bravo</label>
 
-                <input type="checkbox" id="charlieCheckbox" checked>
-                <label for="charlieCheckbox">Charlie</label>
-            </details>
+                    <input type="checkbox" id="charlieCheckbox">
+                    <label for="charlieCheckbox">Charlie</label>
+                </details>
+              </li>
+              <li>
+                <details class="compact indicator-right">
+                  <summary>
+                    Brands
+                  </summary>
+                    <input type="checkbox" id="alphaCheckbox">
+                    <label for="alphaCheckbox">Alpha</label>
+
+                    <input type="checkbox" id="bravoCheckbox">
+                    <label for="bravoCheckbox">Bravo</label>
+
+                    <input type="checkbox" id="charlieCheckbox">
+                    <label for="charlieCheckbox">Charlie</label>
+                </details>
+              </li>
+              <li>
+                <details class="compact indicator-right">
+                  <summary>
+                    Operating system
+                  </summary>
+                    <input type="checkbox" id="alphaCheckbox">
+                    <label for="alphaCheckbox">Alpha</label>
+
+                    <input type="checkbox" id="bravoCheckbox">
+                    <label for="bravoCheckbox">Bravo</label>
+
+                    <input type="checkbox" id="charlieCheckbox">
+                    <label for="charlieCheckbox">Charlie</label>
+                </details>
+              </li>
+              <li>
+                <details class="compact indicator-right">
+                  <summary>
+                    Network speed
+                  </summary>
+                    <input type="checkbox" id="alphaCheckbox">
+                    <label for="alphaCheckbox">Alpha</label>
+
+                    <input type="checkbox" id="bravoCheckbox">
+                    <label for="bravoCheckbox">Bravo</label>
+
+                    <input type="checkbox" id="charlieCheckbox">
+                    <label for="charlieCheckbox">Charlie</label>
+                </details>
+              </li>
+
+            </ul>
+            
+            
           </nav>           
         </div>
       </div>
@@ -109,7 +164,6 @@ layout: default
                   stars
                 </span>
               </div>
-
 
               <ul id="pricing">
                 <li class="finance">
