--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -80,7 +80,7 @@
       <a
         {% if page.url== "/native/" %} aria-current="page" {% endif %}
         {% if page.url contains "native" %} class="current" {% endif %}
-        href="{{ site.baseurl }}/coverage/">Coverage
+        href="#">Coverage
       </a>
     </li>
   </ul>
