--- a/_layouts/plans.html
+++ b/_layouts/plans.html
@@ -8,176 +8,177 @@
     </h1>
   </div>
 
-  <div class="container narrow">
-    <div class="card">
-      <div class="select-container">
-        <label class="h-bravo" for="nato">
-          Number of lines
-        </label>
-        <select id="nato">
-          <option label="1 line" selected>1</option>
-          <option label="2 lines">2 lines</option>
-          <option label="3 lines">3 lines</option>
-          <option label="4 lines">4 lines</option>
-        </select>
+
+  <div class="group-1-4 container">
+    <div class="">
+      <div class="">
+          <label class="hidden" for="nato">
+            Number of lines
+          </label>
+
+        <div class="select-container">
+          <select id="nato">
+            <option label="1 line" selected>1</option>
+            <option label="2 lines">2 lines</option>
+            <option label="3 lines">3 lines</option>
+            <option label="4 lines">4 lines</option>
+            <option label="5 lines">5 lines</option>
+            <option label="6 lines">6 lines</option>
+            <option label="7 lines">7 lines</option>
+            <option label="8 lines">8 lines</option>
+          </select>
+        </div>
+
+        <details open>
+          <summary>Discounts</summary>
+
+          <input type="checkbox" id="alphaCheckbox">
+          <label for="alphaCheckbox">Age 55+</label>
+
+          <input type="checkbox" id="bravoCheckbox">
+          <label for="bravoCheckbox">Military &amp; veterans</label>
+
+          <input type="checkbox" id="charlieCheckbox">
+          <label for="charlieCheckbox">First responder</label>
+
+          <input type="checkbox" id="deltaCheckbox">
+          <label for="deltaCheckbox">Educator</label>
+
+        </details>
+
+      </div>
+    </div>
+  
+    <div class="plans">   
+      <div class="plan card essentials">
+        <div class="plan-header">
+          <h2 class="h-bravo">
+            Essentials 
+            <span class="price">
+              $60<span class="increment">/line</span>
+            </span>
+          </h2>
+          <button>
+            Select Magenta
+          </button>
+          <p>That's it, with autopay, taxes and fees included</p>
+
+        </div>
+
+        <h3 class="h-charlie">Included:</h3>
+        <ul>
+          <li>
+            Unlimited talk &amp; text	
+          </li>
+          <li>
+            Unlimited 5G &amp; 4G LTE data on our network	
+          </li>
+          <li>
+            <a href="#">Premium Data:</a> 50GB
+          </li>
+          <li>
+            Mobile hotspot data: Unlimted 3G speed
+          </li>
+          <li>
+            Unlimited video streaming: SD quality
+          </li>
+          <li>
+            Extended 5G and Ultra Capacity 5G at no extra cost
+          </li>
+        </ul>
+      </div>
+
+      <div class="plan card magenta">
+        <div class="plan-header">
+          <h2 class="h-bravo">
+            Magenta 
+            <span class="price">
+              $70<span class="increment">/line</span>
+            </span>
+          </h2>
+          <button>
+            Select Magenta
+          </button>
+          <p>That's it, with autopay, taxes and fees included</p>
+        </div>
+
+        <h3 class="h-charlie">Included:</h3>
+        <ul>
+          <li>
+            Unlimited talk &amp; text	
+          </li>
+          <li>
+            Unlimited 5G &amp; 4G LTE data on our network	
+          </li>
+          <li>
+            <a href="#">Premium Data:</a> 50GB
+          </li>
+          <li>
+            Mobile hotspot data: 5GB high-speed data / then Unlimited 3G speed	
+          </li>
+          <li>
+            Unlimited video streaming: SD quality
+          </li>
+          <li>
+            Extended 5G and Ultra Capacity 5G at no extra cost
+          </li>
+          <li>
+            Netflix Basic: 1 Screen SD (for 2+ line accounts)	
+          </li>
+          <li>
+            Price includes taxes and fees	
+          </li>
+        </ul>
+
+      </div>
+
+      <div class="plan card max">
+        <div class="plan-header">
+          <h2 class="h-bravo">
+            Magenta Max
+            <span class="price">
+              $85<span class="increment">/line</span>
+            </span>
+          </h2>
+          <button>
+            Select Magenta Max
+          </button>
+          <p>That's it, with autopay, taxes and fees included</p>
+        </div>
+        
+        <h3 class="h-charlie">Included:</h3>
+        <ul>
+          <li>
+            Unlimited talk &amp; text	
+          </li>
+          <li>
+            Unlimited 5G &amp; 4G LTE data on our network	
+          </li>
+          <li>
+            <a href="#">Premium Data:</a> 50GB
+          </li>
+          <li>
+            Mobile hotspot data: 40GB high-speed data / then Unlimited 3G speed
+          </li>
+          <li>
+            Unlimited video streaming: SD quality
+          </li>
+          <li>
+            Extended 5G and Ultra Capacity 5G at no extra cost
+          </li>
+          <li>
+            Netflix Basic: 1 Screen SD with 1 line; Netflix Standard: 2 Screen HD (for 2+ line accounts)
+          </li>
+          <li>
+            Price includes taxes and fees	
+          </li>
+        </ul>
+
       </div>
     </div>
   </div>
- 
-  <div class="container plans">   
-    <div class="plan card essentials">
-      <div class="plan-header">
-        <h2 class="h-bravo">
-          Essentials 
-          <span class="price">
-            $60<span class="increment">/line</span>
-          </span>
-        </h2>
-        <button>
-          Select Magenta
-        </button>
-        <p>That's it, with autopay, taxes and fees included</p>
 
-      </div>
-
-      <h3 class="h-charlie">Included:</h3>
-      <ul>
-        <li>
-          Unlimited talk &amp; text	
-        </li>
-        <li>
-          Unlimited 5G &amp; 4G LTE data on our network	
-        </li>
-        <li>
-          <a href="#">Premium Data:</a> 50GB
-        </li>
-        <li>
-          Mobile hotspot data: Unlimted 3G speed
-        </li>
-        <li>
-          Unlimited video streaming: SD quality
-        </li>
-        <li>
-          Extended 5G and Ultra Capacity 5G at no extra cost
-        </li>
-      </ul>
-    </div>
-
-    <div class="plan card magenta">
-      <div class="plan-header">
-        <h2 class="h-bravo">
-          Magenta 
-          <span class="price">
-            $70<span class="increment">/line</span>
-          </span>
-        </h2>
-        <button>
-          Select Magenta
-        </button>
-        <p>That's it, with autopay, taxes and fees included</p>
-      </div>
-
-      <h3 class="h-charlie">Included:</h3>
-      <ul>
-        <li>
-          Unlimited talk &amp; text	
-        </li>
-        <li>
-          Unlimited 5G &amp; 4G LTE data on our network	
-        </li>
-        <li>
-          <a href="#">Premium Data:</a> 50GB
-        </li>
-        <li>
-          Mobile hotspot data: 5GB high-speed data / then Unlimited 3G speed	
-        </li>
-        <li>
-          Unlimited video streaming: SD quality
-        </li>
-        <li>
-          Extended 5G and Ultra Capacity 5G at no extra cost
-        </li>
-        <li>
-          Netflix Basic: 1 Screen SD (for 2+ line accounts)	
-        </li>
-        <li>
-          Price includes taxes and fees	
-        </li>
-      </ul>
-
-    </div>
-
-    <div class="plan card max">
-      <div class="plan-header">
-        <h2 class="h-bravo">
-          Magenta Max
-          <span class="price">
-            $85<span class="increment">/line</span>
-          </span>
-        </h2>
-        <button>
-          Select Magenta Max
-        </button>
-        <p>That's it, with autopay, taxes and fees included</p>
-      </div>
-      
-      <h3 class="h-charlie">Included:</h3>
-      <ul>
-        <li>
-          Unlimited talk &amp; text	
-        </li>
-        <li>
-          Unlimited 5G &amp; 4G LTE data on our network	
-        </li>
-        <li>
-          <a href="#">Premium Data:</a> 50GB
-        </li>
-        <li>
-          Mobile hotspot data: 40GB high-speed data / then Unlimited 3G speed
-        </li>
-        <li>
-          Unlimited video streaming: SD quality
-        </li>
-        <li>
-          Extended 5G and Ultra Capacity 5G at no extra cost
-        </li>
-        <li>
-          Netflix Basic: 1 Screen SD with 1 line; Netflix Standard: 2 Screen HD (for 2+ line accounts)
-        </li>
-        <li>
-          Price includes taxes and fees	
-        </li>
-      </ul>
-
-    </div>
-
-  </div>
-
-  <div class="container">
-    * During congestion, Magenta customers using >100GB/mo. may notice reduced speeds until next bill cycle due to data prioritization; Essentials customers may notice speeds lower than other customers and further reduction if using >50GB/mo., due to data prioritization. 
-    
-    ** Video typically streams on smartphone/tablet at DVD quality (480p); Magenta Max: activate up to 4K UHD streaming on capable device, or video typically streams at 480p. Scam Shield: Capable device required. Turning on Scam Block might block calls you want; disable anytime.
-
-    See full terms
-
-      <details>
-        <summary>
-          Perks &amp; protections
-        </summary>
-      </details>
-      <details>
-        <summary>
-          Travel benefits
-        </summary>
-      </details>
-      <details>
-        <summary>
-          Add-on features
-        </summary>
-      </details>
-
-
-  </div>
+  
 
   
 
