--- a/_layouts/shop.html
+++ b/_layouts/shop.html
@@ -27,7 +27,7 @@ layout: default
                 <a aria-label="Hotspot & Internet of Things" href="#">Hotspot &amp; IoT</a>
               </li>
               <li>
-                <details class="compact indicator-right">
+                <details class="compact">
                   <summary>
                     Accessories
                   </summary>
@@ -57,7 +57,7 @@ layout: default
             </h2> 
             <ul class="nav-list">
               <li>
-                <details class="compact indicator-right">
+                <details class="compact">
                   <summary>
                     Deals
                   </summary>
@@ -72,7 +72,7 @@ layout: default
                 </details>
               </li>
               <li>
-                <details class="compact indicator-right">
+                <details class="compact">
                   <summary>
                     Brands
                   </summary>
@@ -87,7 +87,7 @@ layout: default
                 </details>
               </li>
               <li>
-                <details class="compact indicator-right">
+                <details class="compact">
                   <summary>
                     Operating system
                   </summary>
@@ -102,7 +102,7 @@ layout: default
                 </details>
               </li>
               <li>
-                <details class="compact indicator-right">
+                <details class="compact">
                   <summary>
                     Network speed
                   </summary>
@@ -131,7 +131,7 @@ layout: default
           {% for i in (1..4) %}
             {% for page in site.products %}
             <li class="products-list-item">
-              <button class="tertiary" aria-label="Special offer: Get the iPhone 13 on us, forever">
+              <button class="inline-modal" aria-label="Special offer: Get the iPhone 13 on us, forever">
                 On us, forever, or whatever
               </button>
               <div class="product-image">
