--- a/_sass/modules/_plans.scss
+++ b/_sass/modules/_plans.scss
@@ -1,7 +1,8 @@
 .plans {
   display: grid;
 
-  @include break($break-large) {
+
+  @include break($break-max) {
     grid-template-columns: 1fr 1fr 1fr;
   }
 
