--- a/_sass/base/_colors.scss
+++ b/_sass/base/_colors.scss
@@ -1,4 +1,4 @@
-$color-brand-primary: #e20074; //Magenta
+//$color-brand-primary: #e20074; //Magenta
 $color-brand-primary: #212121;
 
 $color-text: #323234;
@@ -9,7 +9,7 @@ $color-gray-light: #cecece;
 $color-gray: silver;
 $color-gray-xtra-dark: #323234;
 $color-gray-dark: #676767;
-$color-border-gray: #ccc;
+$color-border-gray: #cecece;
 $color-focus: #6692F0;
 $color-focus: $color-brand-primary;
 
