--- a/_sass/modules/_button.scss
+++ b/_sass/modules/_button.scss
@@ -85,6 +85,10 @@ button {
     }
   }
 
+  &.inline {
+
+  }
+
   &.plus,
   &.minus {
     width: 3rem;
@@ -156,17 +160,38 @@ button {
     }
   }
 
-  &.inline {
-    padding: 1rem;
+  &.inline-modal {
+    padding: .5rem 0 .5rem 2.5rem;
     background: none;
     color: $color-text;
-    &:before {
-      display: none;
-    }
+    text-align: left;
+    position: relative;
+    display: inline-block;
+    margin-bottom: 0;
+    @include ripple();
+
+    &:after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0rem;
+      left: 0rem;
+      width: 2rem;
+      height: 2rem;
+
+      background-image: url("data:image/svg+xml,%0A%3Csvg height='100px' width='100px' fill='%23000000' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' x='0px' y='0px' viewBox='0 0 100 100' style='enable-background:new 0 0 100 100;' xml:space='preserve'%3E%3Cg%3E%3Cpath d='M50,43.1L36.8,30.7H5.3v38.6h31.4L50,56.9l13.2,12.5h31.4V30.7H63.2L50,43.1z M32.8,59.3H15.3V40.7h17.5l9.9,9.3L32.8,59.3 z M84.7,40.7v18.6H67.2L57.3,50l9.9-9.3H84.7z'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center center;
+      opacity: .9;
+      transition: .45s;
+      transform: rotate(0deg);
+    }  
   }
 
   &.edit {
     padding: .5rem;
+    margin-bottom: 0;
     background-color: #fff;
     color: $color-text;
     @include ripple(#fff, #eee, center, center);
@@ -176,6 +201,7 @@ button {
   }
   &.remove {
     padding: .5rem;
+    margin-bottom: 0;
     background-color: #fff;
     color: $color-red-text;
     border: 1px solid $color-red;
