--- a/_sass/modules/_details-summary.scss
+++ b/_sass/modules/_details-summary.scss
@@ -9,9 +9,9 @@ details {
   summary {
     font-weight: bold;
     @include headline;
-    padding: 1.5rem 1rem 1.5rem 5rem !important;
+    padding: 1.5rem 1rem 1.5rem 5rem;
     margin: calc(-1rem);
-    line-height: .875;
+    line-height: 1;
     font-size: 1.25rem;
     cursor: pointer;
     position: relative;
@@ -27,7 +27,7 @@ details {
       content: '';
       display: block;
       position: absolute;
-      top: 1rem;
+      top: 1.125rem;
       left: 1rem;
       width: 2rem;
       height: 2rem;
@@ -35,7 +35,7 @@ details {
       background-color: transparent;
       background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12'%3E%3Cpath fill='grey' d='M6.3,10.1l5.6-5.6C12,4.4,12,4.3,12,4.2c0-0.1,0-0.2-0.1-0.3l0,0c-0.1-0.1-0.2-0.1-0.3-0.1H8.9c-0.1,0-0.2,0-0.3,0.1L6,6.5 L3.4,3.9C3.3,3.8,3.2,3.8,3.1,3.8H0.4c-0.1,0-0.2,0-0.3,0.1l0,0C0,4,0,4.1,0,4.2c0,0.1,0,0.2,0.1,0.3l5.6,5.6 C5.9,10.2,6.1,10.2,6.3,10.1z'%3E%3C/path%3E%3C/svg%3E");
       opacity: 1;
-      background-size: 1rem 1rem;
+      background-size: 1.25rem 1.25rem;
       background-position: center center;
       background-repeat: no-repeat;
       transform: rotate(0deg);
@@ -67,14 +67,17 @@ details {
       @include focus;
     }
   }
-  &[open] {
 
+  // input[type=checkbox] + label,
+  // input[type=radio] + label {
+  //   margin-left: -1rem;
+  // }
+
+  &[open] {
   }
 
-
   &[open] summary {
-    padding-bottom: 1rem;
-    border-bottom: 1px solid $color-border-gray;
+    border-bottom: 1px solid $color-gray;
     margin-bottom: 1rem;
     @include ripple;
     &:before {
@@ -82,6 +85,7 @@ details {
       background-position: center center;
     }
   }
+  
   &:not([open]) summary {
     @include ripple;
   }
@@ -90,35 +94,26 @@ details {
     border: none !important;
     box-shadow: none;
     padding: 0;
-    margin-bottom: 0rem;
+    margin: 0;
 
     summary {
-      margin: 0;
-      padding: 1rem 0;
+      padding: 1.25rem .5rem 1rem 3rem;
       font-size: 1rem;
+      margin: 0;
       font-weight: bold;
-    }
-    input[type=checkbox] + label {
-      margin-left: -1rem;
-    }
+      border-bottom: 1px solid $color-border-gray;
 
-  }
-
-  &.indicator-right {   
-    summary {
-      padding: 1.25rem 4rem 1.25rem 0 !important;
       &:before {
-      content: '';
-      top: .75rem;
-      left: auto;
-      right: 0rem;
+        content: '';
+        top: .625rem;
+        left: 0rem !important; 
+      }
+      &:after {
+        display: none;
+      }
     }
-    &:after {
-      display: none;
-    }
-    }
-
   }
+
   
 }
 
