--- a/_sass/modules/_input-checkbox.scss
+++ b/_sass/modules/_input-checkbox.scss
@@ -1,60 +1,60 @@
 
 
 input[type="checkbox"] {
-  + label {
-    padding-left: 4rem;
-    &:before {
-      content: '';
-      display: block;
-      width: calc(2rem - 2px);
-      height: calc(2rem - 2px);
-      border: 2px solid $color-gray-dark;
-      border-radius: .25rem;
-      position: absolute;
-      left: 1.125rem;
-      top: 1rem;
-      background: #f2f2f2;
-      transition: .2s;
-    }
++ label {
+  &:before {
+    content: '';
+    display: block;
+    width: 2rem;
+    height: 2rem;
+    border-radius: .25rem;
+    position: absolute;
+    left: 0rem;
+    top: 1rem;
+    background: #f2f2f2;
+    transition: .2s;
+  }
 
+  &:after {
+    content: '';
+    color: #fff;
+    display: block;
+    position: absolute;
+    border-radius: .125rem;
+    width: 2rem;
+    height: 2rem;
+    left: 0;
+    top: 1rem;
+    font-size: 0rem;
+    line-height: 2rem;
+    font-weight: normal;
+    background: #fff;
+    transition: .2s;
+    box-shadow: inset 0 0 0rem .2rem rgba($color-brand-primary,.7);
+
+  }
+}
+&:checked {
+  + label {
+    &:before {
+      border-color: $color-brand-primary;
+    }
     &:after {
-      content: '';
-      color: #fff;
-      display: block;
-      position: absolute;
-      border-radius: .125rem;
-      width: 1.5rem;
-      height: 1.5rem;
-      left: calc(1.5rem - 1px);
-      top: calc(1.5rem - 3px);
-      font-size: 0rem;
-      line-height: 1.5rem;
-      font-weight: normal;
-      background: $color-gray-light;
-      transition: .2s;
+      content: '\2713';
+      font-size: 1.9rem;
+      text-align: center;
+      background: $color-brand-primary;
     }
   }
-  &:checked {
-    + label {
-      &:before {
-        border-color: $color-brand-primary;
-      }
-      &:after {
-        content: '\2713';
-        font-size: 1.9rem;
-        text-align: center;
-        background: $color-brand-primary;
-      }
-    }
-  }
-  + label:hover:before,
-  &:focus + label:before {
-    background: none;
-    box-shadow: 0 0 0rem .5rem rgba($color-focus,.2);
-    border-color: $color-brand-primary;
-  }
-  &:active + label:before {
-    box-shadow: 0 0 0rem .75rem rgba($color-focus,.4);
-    border-color: $color-brand-primary;
-  }
+}
++ label:hover:before,
+&:focus + label:before {
+  background: none;
+  box-shadow: 0 0 0rem .5rem rgba($color-focus,.2);
+  border-color: $color-brand-primary;
+}
+&:active + label:before {
+  box-shadow: 0 0 0rem .75rem rgba($color-focus,.4);
+  border-color: $color-brand-primary;
+}
 }
