--- a/_sass/modules/_input-select.scss
+++ b/_sass/modules/_input-select.scss
@@ -1,52 +1,71 @@
 .select-container {
   margin-bottom: 1rem;
   position: relative;
+  background: #fff;
+
+  &:before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 2rem;
+    background-color: transparent;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12'%3E%3Cpath fill='grey' d='M6.3,10.1l5.6-5.6C12,4.4,12,4.3,12,4.2c0-0.1,0-0.2-0.1-0.3l0,0c-0.1-0.1-0.2-0.1-0.3-0.1H8.9c-0.1,0-0.2,0-0.3,0.1L6,6.5 L3.4,3.9C3.3,3.8,3.2,3.8,3.1,3.8H0.4c-0.1,0-0.2,0-0.3,0.1l0,0C0,4,0,4.1,0,4.2c0,0.1,0,0.2,0.1,0.3l5.6,5.6 C5.9,10.2,6.1,10.2,6.3,10.1z'%3E%3C/path%3E%3C/svg%3E");
+    opacity: 1;
+    background-size: 1rem 1rem;
+    background-position: center center;
+    background-repeat: no-repeat;
+    transform: rotate(0deg);
+    box-shadow: 0 0 0rem .1rem transparent;  
+    transition: box-shadow .2s;
+  }
+
+  &:hover {
+    &:before {
+      box-shadow: 0 0 0rem .5rem rgba($color-focus,.2);
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12'%3E%3Cpath fill='black' d='M6.3,10.1l5.6-5.6C12,4.4,12,4.3,12,4.2c0-0.1,0-0.2-0.1-0.3l0,0c-0.1-0.1-0.2-0.1-0.3-0.1H8.9c-0.1,0-0.2,0-0.3,0.1L6,6.5 L3.4,3.9C3.3,3.8,3.2,3.8,3.1,3.8H0.4c-0.1,0-0.2,0-0.3,0.1l0,0C0,4,0,4.1,0,4.2c0,0.1,0,0.2,0.1,0.3l5.6,5.6 C5.9,10.2,6.1,10.2,6.3,10.1z'%3E%3C/path%3E%3C/svg%3E");
+    }
+  }
+  
   &:after {
     content: '';
     display: block;
     position: absolute;
-    bottom: 0rem;
-    height: .125rem;
-    width: 0%;
-    margin-left: 50%;
-    background: $color-focus;
-    transition: .3s;
-    z-index: 99;
-  }
-  &:focus-within,
-  &:hover {
-    &:after {
-      width: 100%;
-      margin-left: 0;
-    }
+    top: 0rem;
+    bottom: 0;
+    left: 1rem;
+    width: 3rem;
+    border-right: 1px solid darken($color-gray-xtra-light, 5);
   }
 }
 
 select {
-  display: block;
-  font-size: 16px;
-  font-family: sans-serif;
-  line-height: 1.3;
+  background: transparent;
+  z-index: 9;
   padding: 1rem;
+  border: none;
+  border-radius: 2px;
+  margin-bottom: calc(2rem + 2px);
+  font-weight: bold;
+  display: block;
+  font-size: 1.25rem;
+  font-family: sans-serif;
+  line-height: .875;
+  padding: 1.5rem 1rem 1.5rem 5rem !important;
   width: 100%;
   max-width: 100%;
-  margin: .25rem 0 0 0;
+  margin: 0;
   border: none;
-  box-shadow: none;
+  box-shadow: 0 1px 2px 1px rgba(#000, .05);
   border-radius: 0;
   -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
-  border: 1px solid $color-border-gray;
-  background-color: #fff;
-  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E');
-  background-repeat: no-repeat;
-  background-position: right .7em top 50%;
-  background-size: .65em auto;
-  transition: .3s;
-  &:hover,
-  &:focus {
-    outline: none;
+
+  &:hover {
   }
 
   option {
