--- a/_sass/modules/_nav.scss
+++ b/_sass/modules/_nav.scss
@@ -1,12 +1,11 @@
 .nav-list {
-  margin: 0 0 2rem 0;
+  margin: 0;
   padding: 0;
 
   li {
     margin: 0;
     padding: 0;
     list-style-type: none;
-    border-bottom: 1px solid $color-border-gray;
     &:last-of-type {
       border-bottom: none;
     }
@@ -14,18 +13,29 @@
 
   a {
     display: block;
-    padding: 1rem 0;
+    padding: 1rem .5rem 1rem 3rem;
     font-weight: bold;
     text-decoration: none;
+    position: relative;
+    border-bottom: 1px solid $color-border-gray;
     &:hover {
       text-decoration: underline;
+    }
+    &:before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: .5rem;
+      left: 0rem;
+      width: 2rem;
+      height: 2rem;
+      border: 1px solid $color-border-gray;
     }
   }
 }
 details {
   .nav-list {
     li {
-      padding-left: 1rem; 
       a {
       }
     }
