Persnickity updates to shop layout

--- a/_sass/modules/_cards.scss
+++ b/_sass/modules/_cards.scss
@@ -14,7 +14,7 @@
 
 .card {
   margin: 0 0 2rem 0;
-  padding: 1rem;
+  padding: 1rem 1rem 0rem 1rem;
   list-style-type: none;
   background: #fff;
   box-shadow: 0 1px 2px 1px rgba(#000, .05);
