--- a/_layouts/shop.html
+++ b/_layouts/shop.html
@@ -9,10 +9,10 @@ layout: default
     <div class="group-1-4">
       <div>
         <div class="card sticky top">
+          <h2 class="h-charlie">
+            Devices
+          </h2>
           <nav aria-label="Device categories">
-            <h2 class="h-bravo">
-              Devices
-            </h2>
             <ul class="nav-list">
               <li>
                 <a href="#">Phones</a>
@@ -48,13 +48,13 @@ layout: default
                 </details>
               </li>
             </ul>
-            
           </nav>
 
+          <h2 class="h-charlie margin-top">
+            Filters
+          </h2> 
+
           <nav aria-label="Filter devices">
-            <h2 class="h-bravo">
-              Filter
-            </h2> 
             <ul class="nav-list">
               <li>
                 <details class="compact">
