--- a/_sass/modules/_layout.scss
+++ b/_sass/modules/_layout.scss
@@ -143,6 +143,13 @@ main {
 
 .flex {
   display: flex;
-    justify-content: space-between;
+  justify-content: space-between;
+}
 
+.margin-no {
+  margin: 0;
+}
+
+.margin-top {
+  margin-top: 1rem;
 }
