--- a/_sass/modules/_nav.scss
+++ b/_sass/modules/_nav.scss
@@ -1,7 +1,8 @@
-.nav-list {
-  margin: 0;
-  padding: 0;
 
+.nav-list {
+  margin: 0 0 0rem 0;
+  padding: 0;
+  
   li {
     margin: 0;
     padding: 0;
@@ -33,7 +34,7 @@
     }
   }
 }
-details {
+.card {
   .nav-list {
     li {
       a {
